# sancho-fetch

./: .dockerignore  .env.example  .gitignore  .repomixignore  AGENTS.md  CLAUDE.md  INTENDED_USE.md  LICENSE  LICENSE-DOCS.md  NOTICE  README.md  README_ALL_INSTRUCTIONS.md  gameplan.md  pyproject.toml  repomix.config.json
examples/: housing_affordability.playbook.yaml
hosting/: Dockerfile  README.md  instructions.txt  limits.py  render.yaml  server.py
installers/: Install Sancho.bat  Install Sancho.command  Uninstall Sancho.bat  Uninstall Sancho.command  setup.bat  setup.sh  uninstall.bat  uninstall.sh
npm-cli/: LICENSE  NOTICE  README.md  package.json
project-docs/: DATASOURCE_IMPLEMENTATION_STANDARD.md  MCP_SERVER_SETUP_CLAUDE_CHATGPT_WEB.md  MODULE_CREATION_GUIDE.md  SUPPORT_MATRIX.md
sancho-workspace/: AI_INSTRUCTIONS.md
scripts/: clean_generated.py  generate_support_matrix.py
tests/: _live_helpers.py  conftest.py  test_bootstrap.py  test_cache_cli.py  test_catalog_cache.py  test_catalog_completeness.py  test_code_shape.py  test_custom_and_fetched_data.py  test_data_store.py  test_datasource_standard.py  test_dc_open_data.py  test_e2e_product_flows.py  test_env_and_setup.py  test_env_recommend.py  test_fec_full_coverage.py  test_fetch_sample_json.py  test_find_sources.py  test_hosted_policy.py  test_inventory_cli.py  test_library.py  test_live_download.py  test_live_fec_persona.py  test_live_gate_provider_kits.py  test_live_health_access_helpers.py  test_live_health_public.py  test_live_keyed.py  test_live_nokey.py  test_live_socrata.py  test_live_special.py  test_mcp_config.py  (+35 more)
(+758 files in other folders)
